--- a/meme-uploader/package.json
+++ b/meme-uploader/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.1.2",
     "dotenv": "^16.5.0",
     "multer": "^2.0.0",
+    "openai": "^3.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0"
